syntax = "proto3";

package IT.WebServices.Fragments.Content.Stats;

import "google/api/annotations.proto";

service StatsShareInterface {
  rpc LogShareContent (LogShareContentRequest) returns (LogShareContentResponse)
  {
    option (google.api.http) = {
      post: "/api/stats/{ContentID}/logshare"
      body: "*"
    };
  }
}
  
message LogShareContentRequest {
  string ContentID = 1;
}
  
message LogShareContentResponse {
}

message ShareContentEvent {
  string UserID = 1;
  string ContentID = 2;
}
